Added walls to simulate a pinball cabinet shape a bit more
